--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -72,6 +72,23 @@
 				}
 			]
 		},
+		{ "menuTitle": "Habitacion",
+			"options":
+				[
+					{
+						"label": "Adicionar",
+						"event": "adicionarHabitacion"
+					},
+					{
+						"label": "Borrar por ID",
+						"event": "eliminarHabitacionPorId"
+					},
+					{
+						"label": "Cambiar descripcion",
+						"event": "cambiarAprovisionamientoHabitacion"
+					}
+				]
+			},
 		{ "menuTitle": "Mantenimiento",
 		  "options":
 			[
