mejoras en la interfaz y en los métodos

--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -89,6 +89,23 @@
 					}
 				]
 			},
+		{ "menuTitle": "RolesDeUsuario",
+			"options":
+				[
+					{
+						"label": "Adicionar",
+						"event": "adicionarRolesDeUsuario"
+					},
+					{
+						"label": "Borrar por ID",
+						"event": "eliminarRolesDeUsuarioPorId"
+					},
+					{
+						"label": "Borrar por Nombre",
+						"event": "eliminarRolesDeUsuarioPorNombre"
+					}
+				]
+			},
 		{ "menuTitle": "Mantenimiento",
 		  "options":
 			[
