--- a/src/main/resources/config/interfaceConfigApp.json
+++ b/src/main/resources/config/interfaceConfigApp.json
@@ -247,6 +247,18 @@
 				{
 					"label": "Reservar servicios",
 					"event": "reservarServiciosConvencion"
+				},
+				{
+					"label": "Eliminar reservas alojamiento",
+					"event": "cancelarReservasAlojamientoConvencion"
+				},
+				{
+					"label": "Eliminar reservas servicios",
+					"event": "cancelarReservasServicioConvencion"
+				},
+				{
+					"label": "Cambiar estado convencion",
+					"event": "registrarFinConvencion"
 				}
 		  ]
 
